compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateMatchLocals1.amy
object Locals
  fn foo(): Int(32) = {
    val i: Int(32) = 42;
    i match {
      case i => 0
    }
  }
end Locals
